Fixed Request Update button alignment on Chrome

--- a/web/source/sass/pages/dispensary/dispensary_info.scss
+++ b/web/source/sass/pages/dispensary/dispensary_info.scss
@@ -273,7 +273,7 @@
                 .request-update {
                     flex: 1;
                     display: flex;
-                    justify-content: end;
+                    justify-content: flex-end;
                     margin: auto 1em auto 0;
 
                     .btn-request {
